thread & plot channel built

--- a/src/app/components/candleplot/CandlePlot.html
+++ b/src/app/components/candleplot/CandlePlot.html
@@ -8,11 +8,11 @@ candle plot!
 
 
 
-<svg CandlePlotSvg width="400" height="300"  >
+<svg CandlePlotSvg width="600" height="300"  >
 
-  <g transform="translate(0,300)scale(1,-1)"  >
-    <g Candle></g>
-  </g>
+  <!--<g transform="translate(0,300)scale(1,-1)"  >-->
+    <!--<g Candle></g>-->
+  <!--</g>-->
 </svg>
 
 <button (click)="sendMessage()"  >Send Message</button>
