--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,7 +9,7 @@
 
   <div class="bac_container">
     <div class="plot_container">
-      <div CandlePlot></div>
+      <div CandlePlot symbol="XLMETH" timeInterval="60"></div>
     </div>
     <div class="tradeflow_container">
 
