candle plot scale and mouse drag done

--- a/src/app/components/candleplot/CandlePlot.html
+++ b/src/app/components/candleplot/CandlePlot.html
@@ -7,9 +7,12 @@
 candle plot!
 
 
+<svg CandlePlotSvg draggable="true" width="800" height="480"  viewBoxX="-600" viewBoxY="0" viewBoxWidth="800" viewBoxHeight="480"  class="CandlePlotSvg"    >
 
-<svg CandlePlotSvg width="600" height="300"  >
+  <g CandlePlotG transform="translate(0,300)scale(1,-1)"  >
 
+
+  </g>
   <!--<g transform="translate(0,300)scale(1,-1)"  >-->
     <!--<g Candle></g>-->
   <!--</g>-->
