--- a/src/app/components/candleplot/UiCandlePlot.html
+++ b/src/app/components/candleplot/UiCandlePlot.html
@@ -7,12 +7,9 @@
 candle plot!
 
 
-<svg CandlePlotSvg draggable="true" width="800" height="480"  viewBoxX="-600" viewBoxY="0" viewBoxWidth="800" viewBoxHeight="480"  class="CandlePlotSvg"    >
-
-  <g CandlePlotG transform="translate(0,300)scale(1,-1)"  >
+<svg UiCandlePlotSvg draggable="true" width="800" height="480"  viewBoxX="-4300" viewBoxY="0" viewBoxWidth="800" viewBoxHeight="480"   class="UiCandlePlotSvg"    >
 
 
-  </g>
   <!--<g transform="translate(0,300)scale(1,-1)"  >-->
     <!--<g Candle></g>-->
   <!--</g>-->
