uicandle mcandle ui visualization finished.

--- a/src/app/components/candleplot/UiCandlePlot.scss
+++ b/src/app/components/candleplot/UiCandlePlot.scss
@@ -6,3 +6,34 @@
 .UiCandlePlotSvg{
   background-color:#dedede;
 }
+
+
+.UiCandle {
+
+}
+
+
+
+.rectIncrease{
+  stroke-width: 1;
+  stroke:green;
+  fill:none;
+}
+
+.rectDecrease{
+  stroke-width: 1;
+  stroke:red;
+  fill:none;
+}
+
+.lineIncrease{
+  stroke-width: 1;
+  stroke:green;
+  fill:none;
+}
+
+.lineDecrease{
+  stroke-width: 1;
+  stroke:red;
+  fill:none;
+}
