window added. svg in svg is done

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,7 +9,9 @@
 
   <div class="bac_container">
     <div class="plot_container">
-      <div UiCandlePlot symbol="XLMETH" timeInterval="60"></div>
+      <svg UiPlotDesktop class="UiPlotDesktop" width="1000" height="800" ></svg>
+
+
     </div>
     <div class="tradeflow_container">
 
