--- a/src/app/components/desktop/windows/candleplot/UiCandlePlotWindow.scss
+++ b/src/app/components/desktop/windows/candleplot/UiCandlePlotWindow.scss
@@ -1,12 +1,14 @@
 
-.UiCandlePlot{
-  background-color:blue;
+
+.UiCandlePlotWindow{
+  //background-color:#dedede;
+  //fill:blue;
+  color:#fefefe;
 }
 
-.UiCandlePlotSvg{
-  background-color:#dedede;
+.UiCandlePlotWindowBGRect{
+  fill:#252525;
 }
-
 
 .UiCandle {
 
@@ -41,7 +43,8 @@
 
 
 .streamingNotStartedText {
-  color:red;
   font-size:16px;
-  font-weight:bold;
+  //font-weight:bold;
+  stroke:none;
+  fill:#dedede;
 }
