frame in window via nested svg done.

--- a/src/app/components/desktop/UiPlotDesktop.html
+++ b/src/app/components/desktop/UiPlotDesktop.html
@@ -9,7 +9,7 @@ candle plot!
 <!--<svg:rect x="0" y="0" height="800" width="1000" style="background-color: #f8efc0;"></svg:rect>-->
 <!--<svg:rect x="0" y="0" height="400" width="800" style="background-color: #dedede"></svg:rect>-->
 
-<svg UiCandlePlotWindow draggable="true" width="800" height="480"  viewBoxX="-4300" viewBoxY="0" viewBoxWidth="800" viewBoxHeight="480"   class="UiCandlePlotWindow"   >
+<svg UiCandlePlotWindow  width="800" height="480"  viewBoxX="-4300" viewBoxY="0" viewBoxWidth="800" viewBoxHeight="480"   class="UiCandlePlotWindow"   >
 
 </svg>
 
