price axis and currency formatter done.

--- a/src/app/components/desktop/UiPlotDesktop.html
+++ b/src/app/components/desktop/UiPlotDesktop.html
@@ -9,7 +9,7 @@ candle plot!
 <!--<svg:rect x="0" y="0" height="800" width="1000" style="background-color: #f8efc0;"></svg:rect>-->
 <!--<svg:rect x="0" y="0" height="400" width="800" style="background-color: #dedede"></svg:rect>-->
 
-<svg UiCandlePlotWindow  width="600" height="450"  viewBoxX="0" viewBoxY="0" viewBoxWidth="800" viewBoxHeight="600"   class="UiCandlePlotWindow"   >
+<svg UiCandlePlotWindow  width="600" height="300"     class="UiCandlePlotWindow"   >
 
 </svg>
 
