time axis is done. drag sync with time and candle should be done.

--- a/src/app/components/desktop/windows/candleplot/UiCandlePlotWindow.scss
+++ b/src/app/components/desktop/windows/candleplot/UiCandlePlotWindow.scss
@@ -3,7 +3,7 @@
 .UiCandlePlotWindow{
   //background-color:#dedede;
   //fill:blue;
-  color:#fefefe;
+  //fill:#fefefe;
 }
 
 .UiCandlePlotWindowBGRect{
